[metadata]
name = warm
summary = Deploy OpenStack resources from Yaml templates.
description-file =
    README
author = Sahid Orentino Ferdjaoui
author-email = sahid.ferdjaoui@cloudwatt.com
home-page = https://wiki.openstack.org/wiki/Warm
classifier =
    Environment :: OpenStack
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux

[files]
packages =
    warm

[entry_points]
console_scripts =
    warm = warm:main
